--- a/style.css
+++ b/style.css
@@ -89,6 +89,9 @@ footer {
 
 
 @media only screen and (max-width: 450px){
+    .container{
+        width: 350px;
+    }
     .wrapper{
         height: 468px;
     }
